@@ -1,3 +1,6 @@
+Nov 04, 2007: Ludwig Nussel <l-n@users.sourceforge.net>
+- close fds before launching games
+
 Nov 03, 2007: Ludwig Nussel <l-n@users.sourceforge.net>
 - offer more q4 and etqw versions in preferences dialog
 
